# jetbrains_ispc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
images/: newton.ppm  newton_serial.ppm
include/: colours.h  newton_cxx.h
ispc/: complex.ispc  newton.ispc
